--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@heroicons/react": "^2.1.5",
     "chart.js": "^4.4.5",
+    "framer-motion": "^11.11.11",
     "leaflet": "^1.9.4",
     "mqtt": "^5.10.1",
     "react": "^18.3.1",
