--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "chart.js": "^4.4.5",
     "framer-motion": "^11.11.11",
     "leaflet": "^1.9.4",
+    "mapbox-gl": "^3.8.0",
     "mqtt": "^5.10.1",
     "react": "^18.3.1",
     "react-chartjs-2": "^5.2.0",
