--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@eslint/js": "^9.11.1",
     "@types/chart.js": "^2.9.41",
     "@types/leaflet": "^1.9.14",
+    "@types/mapbox-gl": "^3.4.1",
     "@types/react": "^18.3.11",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
