--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "react-icons": "^5.3.0",
     "react-leaflet": "^4.2.1",
     "react-map-gl": "^7.1.7",
-    "react-router-dom": "^6.28.0"
+    "react-router-dom": "^6.28.0",
+    "vite-plugin-pwa": "^0.21.0"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
